--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,8 @@ p::first-line {
   justify-content: center;
 }
 
-#introbox {
+.imageandtextbox {
   margin: 20px 0px 20px 0px;
   display: flex;
+  flex-direction: row;
 }
